# gsasm

./: .gitignore  LICENSE  README.md  pyproject.toml
.forgejo/workflows/: tests.yml
.github/workflows/: publish.yml
docs/: ADVERSARIAL_REVIEW_2026-07-17.md  ADVERSARIAL_REVIEW_LAST_8_COMMITS_2026-07-19.md  ADVERSARIAL_REVIEW_P8_2026-07-18.md  ADVERSARIAL_REVIEW_RECENT_BINARY_EXACT_2026-07-18.md  ADVERSARIAL_REVIEW_WS_A_2026-07-18.md  EXPRESSLOAD_TIER2_PLAN.md  GSOS_MILESTONES.md  REFACTORING.md  RESULTS.md  REZ_REVIEW_2026-07-14.md  TODO.md
docs/design/: BESPOKERY_AUDIT.md  (+18 more)
gsasm/: __main__.py  asm.py  expr.py  expressload.py  link.py  linkiigs.py  m65816.py  makebin.py  omf.py
tests/: README.md  omfdump.py  run_fixtures.py  test_branch_range.py  test_expressload_case_b.py  test_include_not_found.py  test_linkiigs_defer_left_shift.py  test_linkiigs_super_type26.py  test_rez_gen.py  test_rez_lexer.py  test_rez_parser.py  test_rez_pipeline.py
work/: SCOPE_RESOLUTION.md  _common.py  buildrom.py  bytecheck.py  diskcheck.py  drivercheck.py  easymountcheck.py  fstcheck.py  gate.py  gate_baseline.json  generality_check.py  hfs.py  hfs104b_roundtrip.py  jumptable_probe.py  kernelcheck.py  linkcheck.py  linkrom.py  loader_placed.py  loader_residual.py  mpwmake_probe.py  objcheck.py  p3_oracle.py  p8check.py  probootcheck.py  profst_diag.py  recmap.py  reloc_survey.py  rezbuildcheck.py  rezcheck.py  rezemitcheck.py  rezgencheck.py  rezlexcheck.py  rezloadcheck.py  rezparsecheck.py  romcov.py  segdiff.py  startgsos_diag.py  tool034_diag.py  toolcheck.py  toolsetup_probe.py
(+200 files in other folders)
