[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsasm"
version = "0.2.0"
description = "Clean-room MPW IIgs toolchain in Python: 65816 assembler, OMF linker, Rez resource compiler"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["apple2gs", "65816", "assembler", "omf", "retro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Assemblers",
    "Topic :: System :: Emulators",
]

[project.scripts]
gsasm = "gsasm.__main__:asm_main"
gslink = "gsasm.__main__:link_main"
gsrez = "gsasm.__main__:rez_main"

[project.urls]
Homepage = "https://github.com/emdeejay/gsasm"
Repository = "https://github.com/emdeejay/gsasm"

[tool.hatch.build.targets.wheel]
packages = ["gsasm"]
